--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install -- prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
